# FractalArt

./: FractalArt.cabal  LICENSE  README.md  Readme.md  default.nix  shell.nix  stack.yaml
.github/: FUNDING.yml
cbits/: wallpaper.c  wallpaper.h  wallpaper.m  wallpaper_win32.c  wallpaper_x11.c
src/: Main.hs
src/FractalArt/: ForeignFunctions.hs  SimpleCommandParser.hs
