name:                FractalArt
version:             0.2.0.0
synopsis:            Generates colorful wallpapers
description:
	This application generates colorful images as a wallpaper
license:             MIT
license-file:        LICENSE
author:              Tom
maintainer:          Tom.TSmeets@Gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable FractalArt
  main-is:          Main.hs
  include-dirs:     cbits
  if os(linux)
      extra-libraries:  X11
  other-extensions: ForeignFunctionInterface
  c-sources:        cbits/wallpaper.c
  build-depends:    base        >=4.7  && <4.9
                  , random      >=1.0  && <1.2
                  , mwc-random  >=0.13 && <0.14
                  , directory   >=1.2  && <1.3
                  , filepath    >=1.3  && <1.5
                  , primitive   >=0.5  && <0.6
                  , vector      >=0.10 && <0.11
                  , JuicyPixels >=3.2  && <3.3
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -O2
