name:                FractalArt
version:             0.2.0.1
synopsis:            Generates colorful wallpapers
description:
	This application generates colorful images as a wallpaper
license:             MIT
license-file:        LICENSE
author:              Tom
maintainer:          Tom.TSmeets@Gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable FractalArt
  main-is:          Main.hs
  include-dirs:     cbits
  if os(linux)
      extra-libraries:  X11
  if os(darwin)
      cc-options:       -fmodules
      extra-libraries:  objc
      c-sources:        cbits/wallpaper.m
  other-extensions: ForeignFunctionInterface
  if !os(darwin)
      c-sources:        cbits/wallpaper.c
  build-depends:    base > 4 && < 5
                  , random
                  , mwc-random
                  , directory
                  , filepath
                  , primitive
                  , vector
                  , JuicyPixels
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -O2
