name:                FractalArt
version:             0.2.0.2
synopsis:            Generates colorful wallpapers
description:         This application generates colorful images as a wallpaper
homepage:            https://github.com/TomSmeets/FractalArt
license:             MIT
license-file:        LICENSE
author:              Tom Smeets
maintainer:          Tom.TSmeets@Gmail.com
copyright:           2016 Tom Smeets
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable FractalArt
  main-is:          Main.hs
  include-dirs:     cbits
  if os(linux)
      extra-libraries:  X11
  if os(darwin)
      cc-options:       -fmodules
      extra-libraries:  objc
      c-sources:        cbits/wallpaper.m
  other-extensions: ForeignFunctionInterface
  if !os(darwin)
      c-sources:        cbits/wallpaper.c
  build-depends:    base > 4 && < 5
                  , random
                  , mwc-random
                  , directory
                  , filepath
                  , primitive
                  , vector
                  , JuicyPixels
  hs-source-dirs:   src
  other-modules:
    FractalArt.SimpleCommandParser
    FractalArt.ForeignFunctions
  default-language: Haskell2010
  ghc-options: -O2

source-repository head
  type:     git
  location: git://github.com/TomSmeets/FractalArt.git
